Bump plugins and dependencies versions. And fix checkstyle errors.