@@ -69,29 +69,29 @@
 
         <!-- plugin versions -->
         <version.plugin.maven-compiler-plugin>3.8.1</version.plugin.maven-compiler-plugin>
-        <version.plugin.maven-checkstyle-plugin>3.1.1</version.plugin.maven-checkstyle-plugin>
-        <version.plugin.maven-surefire-plugin>2.22.0</version.plugin.maven-surefire-plugin>
-        <version.plugin.maven-failsafe-plugin>2.22.0</version.plugin.maven-failsafe-plugin>
-        <version.plugin.maven-source-plugin>3.0.1</version.plugin.maven-source-plugin>
-        <version.plugin.maven-javadoc-plugin>3.1.0</version.plugin.maven-javadoc-plugin>
-        <version.plugin.maven-site-plugin>3.7.1</version.plugin.maven-site-plugin>
-        <version.plugin.maven-project-info-plugin>3.0.0</version.plugin.maven-project-info-plugin>
-        <version.plugin.maven-gpg-plugin>1.6</version.plugin.maven-gpg-plugin>
+        <version.plugin.maven-checkstyle-plugin>3.1.2</version.plugin.maven-checkstyle-plugin>
+        <version.plugin.maven-surefire-plugin>3.0.0-M5</version.plugin.maven-surefire-plugin>
+        <version.plugin.maven-failsafe-plugin>3.0.0-M5</version.plugin.maven-failsafe-plugin>
+        <version.plugin.maven-source-plugin>3.2.1</version.plugin.maven-source-plugin>
+        <version.plugin.maven-javadoc-plugin>3.3.1</version.plugin.maven-javadoc-plugin>
+        <version.plugin.maven-site-plugin>3.9.1</version.plugin.maven-site-plugin>
+        <version.plugin.maven-project-info-plugin>3.1.2</version.plugin.maven-project-info-plugin>
+        <version.plugin.maven-gpg-plugin>3.0.1</version.plugin.maven-gpg-plugin>
         <version.plugin.nexus-staging-maven-plugin>1.6.8</version.plugin.nexus-staging-maven-plugin>
-        <version.plugin.maven-enforcer-plugin>3.0.0-M2</version.plugin.maven-enforcer-plugin>
-        <version.plugin.maven-release-plugin>3.0.0-M1</version.plugin.maven-release-plugin>
-        <version.plugin.swagger-maven-plugin>2.1.7</version.plugin.swagger-maven-plugin>
-        <version.plugin.versions-maven-plugin>2.7</version.plugin.versions-maven-plugin>
-        <version.plugin.maven-jar-plugin>3.1.0</version.plugin.maven-jar-plugin>
-        <version.plugin.buildnumber-maven-plugin>1.4</version.plugin.buildnumber-maven-plugin>
-        <version.plugin.maven-bundle-plugin>4.1.0</version.plugin.maven-bundle-plugin>
+        <version.plugin.maven-enforcer-plugin>3.0.0</version.plugin.maven-enforcer-plugin>
+        <version.plugin.maven-release-plugin>3.0.0-M4</version.plugin.maven-release-plugin>
+        <version.plugin.swagger-maven-plugin>2.1.12</version.plugin.swagger-maven-plugin>
+        <version.plugin.versions-maven-plugin>2.8.1</version.plugin.versions-maven-plugin>
+        <version.plugin.maven-jar-plugin>3.2.0</version.plugin.maven-jar-plugin>
+        <version.plugin.buildnumber-maven-plugin>3.0.0</version.plugin.buildnumber-maven-plugin>
+        <version.plugin.maven-bundle-plugin>5.1.3</version.plugin.maven-bundle-plugin>
 
         <!-- plugins dependencies -->
-        <version.lib.checkstyle>8.41.1</version.lib.checkstyle>
+        <version.lib.checkstyle>9.2</version.lib.checkstyle>
 
         <!-- dependency version -->
-        <version.lib.swagger-annotations>2.1.7</version.lib.swagger-annotations>
-        <version.lib.jackson-annotations>2.12.3</version.lib.jackson-annotations>
+        <version.lib.swagger-annotations>2.1.12</version.lib.swagger-annotations>
+        <version.lib.jackson-annotations>2.13.1</version.lib.jackson-annotations>
         <version.lib.microprofile>4.0</version.lib.microprofile>
     </properties>
 
@@ -317,6 +317,14 @@
                         <tagNameFormat>@{project.version}</tagNameFormat>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.plugin.maven-compiler-plugin}</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -406,65 +414,6 @@
                         </configuration>
                     </plugin>
                 </plugins>
-            </build>
-        </profile>
-
-
-        <profile>
-            <id>jdk9+</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <packaging.type>bundle</packaging.type>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${version.plugin.maven-compiler-plugin}</version>
-                            <configuration>
-                                <release>${java.version}</release>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <argLine>--add-modules java.xml.bind</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-
-        <profile>
-            <id>jdk8-</id>
-            <activation>
-                <jdk>(,9)</jdk>
-            </activation>
-            <properties>
-                <packaging.type>bundle</packaging.type>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${version.plugin.maven-compiler-plugin}</version>
-                            <configuration>
-                                <source>${java.version}</source>
-                                <target>${java.version}</target>
-                                <excludes>
-                                    <exclude>module-info.java</exclude>
-                                </excludes>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
             </build>
         </profile>
     </profiles>
